# factorio-iac

./: .env.example  .pre-commit-config.yaml  Dockerfile  Pulumi.yaml  README.md  __main__.py  build.py  config.example.py  oneshot.py  pyproject.toml  wrapper.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  renovate.json  test.yml
.github/workflows/: deploy.yml  pulumi.yml  test.yml
configure/: common.py  configure.py  inventory.py  prepare.py
configure/group_data/: all.py
deploy/: main.py  wrapper.py
files/: Dockerfile  factorio_backup.service  factorio_backup.timer
inputs/: factorio_backup.env.j2  factorio_backup.service.j2  factorio_server.service.j2
scripts/: common.py  configure.py  deploy.py  get_pulumi_version.py  prepare.py
scripts/pyinfra/: configure.py  inventory.py
templates/: factorio_backup.env.j2  factorio_backup.service.j2  factorio_server.service.j2  kickstart.sh.j2
