[project]
    name = "factorio-iac"
    version = "0.1.0"
    description = "Factorio Infrastructure as Code"
    license = { text = "MIT" }
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    requires-python = ">=3.12"
    dependencies = [
        "jinja2==3.1.4",
        "python-dotenv==1.0.1",
        "pyinfra==3.1.1",
        "pulumi==3.135.0",
        "pulumi-aws==6.54.1",
        "pulumi-cloudflare==5.39.1",
        "pip>=24.2",                 # needed for pulumi compatibility
    ]

[tool.uv]
    dev-dependencies = ["pre-commit>=3.2.0", "pre-commit-uv>=3.8.0"]
    package          = false

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
