[project]
    name = "factorio-iac"
    version = "0.1.0"
    description = "Factorio Infrastructure as Code"
    license = { text = "MIT" }
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    requires-python = ">=3.12"
    dependencies = [
        "jinja2==3.1.4",
        "pyinfra==3.1.1",
        "pulumi==3.142.0",
        "pulumi-aws==6.61.0",
        "pulumi-cloudflare==5.43.1",
        "pip>=24.2",                 # needed for pulumi compatibility
    ]

[dependency-groups]
    dev = ["pre-commit>=3.2.0"]

[tool.uv]
    package = false

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
